--- a/vue-js/css/style.css
+++ b/vue-js/css/style.css
@@ -4,9 +4,181 @@
     box-sizing: border-box;
 }
 
-.img-container{
-   object-fit: contain;
-   height: 100px;
-   width: 100px;
-   background-repeat: no-repeat; 
+.container-background{
+    background-color: #ececec;
+    height: 100vh;
+}
+
+.aqua{
+    background-color: #00acac;
+    height: 120px;
+}
+
+.container{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    display: flex;
+}
+
+/* sidebar */
+
+.side-bar{
+    width: 300px;
+    height: 95vh;
+    background-color: rgb(243, 243, 243);
+    margin: 15px 0 0 100px;
+}
+
+.user, 
+.contact-list, 
+.notification{
+    height: 80px;
+}
+
+.user{
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    background-color: rgb(223, 223, 223);
+
+}
+
+.contact-photo, .user-photo{
+    height: 50px;
+    width: 50px; 
+    border-radius: 50%;
+}
+
+.icons{
+    margin-left: 70px;
+    color: #777;
+}
+
+.icons > i {
+    padding: 0 5px;
+}
+
+.notification{
+    background-color: #98d1f6;
+    display: flex;
+    align-items: center;
+}
+
+.notification > i {
+    font-size: 25px;
+    border-radius: 50%;
+    padding: 15px;
+    color: #98d1f6;
+    background-color: white;
+    margin-left: 15px;
+}
+
+.notification > div{
+    font-size: small;
+    margin-left: 10px;
+}
+
+.underline{
+    text-decoration: underline;
+    color: #777;
+}
+
+.search-chat{
+    text-align: center;
+    line-height: 50px;
+}
+
+.search-chat > i{
+    position: absolute;
+    margin: 17px 0 0 15px;
+    color: #888;
+}
+
+.research-chat{
+    border-style: none;
+    border-radius: 5px;
+    width: 290px;
+    padding: 10px;
+    text-align: center;
+    outline: none;
+}
+
+.container-contacts{
+    background-color: white;
+    padding-top: 10px;
+    margin-right: 15px;
+    height: calc(100% - 210px);
+}
+
+ul > li{
+    list-style-type: none;
+}
+
+.contact-list > span{
+    position: absolute;
+    margin: 5px 0 0 10px;
+}
+
+.contact-list > img {
+    margin-left: 15px;
+}
+
+/* main */
+
+.main{
+   background-color: white;
+   width: 700px;
+   height: 95vh;
+   margin-top: 15px;
+}
+
+.friend{
+    display: flex;
+    align-items: center;
+    height: 80px;
+    background-color: rgb(223, 223, 223);
+    border-left: 1px rgb(199, 199, 199) solid;
+}
+
+.icons-chat > i{
+    color: #777;
+    padding: 0 5px;
+}
+
+/* da modificare */
+.stampare-contact{
+    width: 615px;
+    height: 80px;
+}
+/* -- */
+
+.chat{
+    background-image: url("../img/mine.jpg");
+    height: calc(100% - 140px);
+}
+
+/* footer */
+
+.footer{
+    background-color: #fff5f5dc;
+    height: 60px;
+    color: #777;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.footer > input{
+    padding: 15px;
+    border-radius: 5px;
+    border-style: none;
+    outline: none;
+    width: 500px;
+}
+
+footer > i{
+    font-size: 20px;
+    color: #777;
 }
