--- a/vue-js/css/style.css
+++ b/vue-js/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .container-background{
-    background-color: #ececec;
+    background: linear-gradient(rgb(243, 243, 243), #dfdfdf);
     height: 100vh;
 }
 
@@ -14,11 +14,14 @@
     height: 120px;
 }
 
+.grey{
+    background-color: rgb(230, 230, 230);
+}
+
 .container{
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 1;
     display: flex;
 }
 
@@ -37,12 +40,15 @@
     height: 80px;
 }
 
+.contact-list{
+    padding-top: 15px;
+}
+
 .user{
-    display: flex;
+    display: flex; 
     align-items: center;
     padding-left: 10px;
     background-color: rgb(223, 223, 223);
-
 }
 
 .contact-photo, .user-photo{
@@ -107,7 +113,6 @@
 
 .container-contacts{
     background-color: white;
-    padding-top: 10px;
     margin-right: 15px;
     height: calc(100% - 210px);
 }
@@ -147,24 +152,56 @@ ul > li{
     padding: 0 5px;
 }
 
-/* da modificare */
-.stampare-contact{
-    width: 615px;
+.chat-contact{
+    width: 610px;
     height: 80px;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
 }
-/* -- */
+
+.chat-contact > div{
+    margin-left: 10px;
+}
+
+.chat-contact > div > span:last-child{
+    color: #777;
+    font-size: small;
+}
 
 .chat{
     background-image: url("../img/mine.jpg");
     height: calc(100% - 140px);
+    padding: 50px;
+}
+
+.message{
+    padding: 10px 20px;
+    border-radius: 10px;
 }
 
 .user-message{
     background-color: #c2ff9b;
+    /* float: right; */
+    /* display: flex;
+    justify-content: end; */
 }
 
 .friend-message{
     background-color: white;
+    /* float: left; */
+    /* display: flex; */
+    /* justify-content: start; */
+}
+
+.right{
+    display: flex;
+    justify-content: end;
+}
+
+.left{
+    display: flex;
+    justify-content: start;
 }
 
 /* footer */
