--- a/vue-js/css/style.css
+++ b/vue-js/css/style.css
@@ -188,13 +188,16 @@ ul > li{
     background-color: white;
 }
 
-.right{
+.right, .left{
     display: flex;
+    margin-bottom: 10px;
+}
+
+.right{
     justify-content: end;
 }
 
 .left{
-    display: flex;
     justify-content: start;
 }
 
