--- a/vue-js/css/style.css
+++ b/vue-js/css/style.css
@@ -169,7 +169,8 @@ ul > li{
 }
 
 .chat-contact > div > span:last-child,
-.message > span:last-child{
+.message > span:last-child,
+.dropdown > i{
     color: #777;
     font-size: 13px;
 }
@@ -198,9 +199,10 @@ ul > li{
     background-color: white;
 }
 
-.message > span:last-child{
+.message > span:last-child,
+.dropdown{
     float: right;
-    margin-top: 2px;
+    margin-left: 10px;
 }
 
 .flex{
@@ -213,6 +215,45 @@ ul > li{
 
 .left{
     justify-content: start;
+}
+
+.dropbtn {
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    color: black;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    cursor: pointer;
+}
+
+.dropdown a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
 }
 
 /* footer */
